# CollegeCounter

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  deploy_instructions.rtf  deploy_instructions.txt  dev.sh  docker-compose.yml  index.html  load_db.sh
.cc-dev/: .gitignore
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cc-backend/: .gitignore  Dockerfile  app.py  pf-all-teams.json  requirements.txt
cc-backend/cc_backend/: __init__.py  models.py  necc.py  playfly.py  views.py
cc-backend/legacy/: Dockerfile  pf-all-matches.json  requirements.txt
cc-backend/v1/: .env.example  .gitignore  Dockerfile  manage_admins.py  pyproject.toml  requirements.txt
cc-backend/v1/cc/: admin_views.py  image_views.py  middleware.py  models.py  public_views.py  sample_json_response.txt  urls.py  urls_public.py  views.py  webhooks.py
cc-backend/v1/cc/migrations/: 0001_initial.py  0002_match_competition_match_season.py  0003_alter_match_date.py  0004_player_seasons.py  0005_remove_unique_constraints.py  0006_customevent.py  0007_eventmatch_extra_info.py  0008_customevent_division.py  0009_participant_regentsleague_id.py  0010_match_regentsleague_id.py
cc-backend/v1/cc/tests/: test_public_api.py
cc-backend/v1/v1/: settings.py  urls.py
cc-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
cc-frontend/legacy/: .env.development  package-lock.json  package.json
cc-frontend/src/: App.tsx  Footer.tsx  Nav.tsx  custom.scss  types.ts
cc_backend/: .gitignore  Dockerfile  app.py  docker-compose.yml  models.py  requirements.txt  views.py
reverse-proxy/: nginx.conf
studio-cc-cms/: package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
(+107 files in other folders)
