[project]
name = "v1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.12.1",
    "asgiref>=3.11.0",
    "blinker>=1.9.0",
    "cachecontrol>=0.14.3",
    "cachetools>=6.2.6",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "click>=8.1.8",
    "cryptography>=46.0.4",
    "dj-database-url>=3.0.1",
    "django>=4.2.27",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "google-api-core>=2.29.0",
    "google-auth>=2.48.0",
    "google-cloud-core>=2.5.0",
    "google-cloud-firestore>=2.23.0",
    "google-cloud-storage>=3.8.0",
    "google-crc32c>=1.8.0",
    "google-resumable-media>=2.8.0",
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.76.0",
    "grpcio-status>=1.76.0",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "hyperframe>=6.1.0",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "msgpack>=1.1.2",
    "packaging>=26.0",
    "pillow>=11.3.0",
    "proto-plus>=1.27.0",
    "protobuf>=6.33.5",
    "psycopg2-binary>=2.9.11",
    "pyasn1>=0.6.2",
    "pyasn1-modules>=0.4.2",
    "pycparser>=2.23",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.46",
    "sqlparse>=0.5.5",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.5",
]
